--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
-<head></head>
-<body>Nathan's Fun Website 2</body>
+<head>
+    <script src="js/main.js"></script>
+</head>
+<body><a href="#" onclick="myAlert();">Nathan's Fun Website 3</a></body>
 </html>
